# up-cpor

./: .gitignore  AGENTS.md  build.sh  environment.yml  pyproject.toml  setup.py
CPORLib/: CPORLib.csproj
CPORLib/Algorithms/: CPORPlanner.cs  PlannerBase.cs  SDRPlanner.cs
CPORLib/FFCS/: FF.cs  InputConverter.cs  InstFinal.cs  Utils.cs
CPORLib/LogicalUtilities/: Argument.cs  GroundedPredicate.cs  ParametrizedPredicate.cs  StableHash.cs
CPORLib/Parsing/: Parser.cs
CPORLib/PlanningModel/: BeliefState.cs  ConditionalPlanTreeNode.cs  Domain.cs  ParametrizedAction.cs  PartiallySpecifiedState.cs  PlanningAction.cs  Problem.cs  Simulator.cs
CPORLib/Tools/: GenericArraySet.cs  OptionsSnapshot.cs  RandomGenerator.cs  UnifiedSet.cs  Utilities.cs
Tests/: conftest.py  test_cpor.py  test_meta_cpor.py  test_sdr.py  test_sdr_simulator.py
Tests/colorballs2-2/: d.pddl
Tests/wumpus10/: d.pddl
notebooks/: CPOR_and_SDR_running_examples.ipynb
tests/: conftest.py  cpor_test_utils.py  domains.py  sdr_test_utils.py  sdr_trace_runner.py  test_complex_domain.py  test_complex_domain_fix_regressions.py  test_converter.py  test_converter_conditional_effects.py  test_cpor.py  test_cpor_closed_state_regressions.py  test_cpor_validate_plan_cache_regressions.py  test_cpor_write_plan_regressions.py  test_generic_array_set_reset_regressions.py  test_meta_cpor.py  test_sat_solver.py  test_sdr.py  test_sdr_simulator.py  test_up_test_utils.py  up_test_utils.py
tests-old/: test_cpor.py  test_meta_cpor.py  test_sdr.py  test_sdr_simulator.py
tests/blocks2/: out.txt  (+3 more)
up_cpor/: _cpor_worker.py  caching_simulator.py  converter.py  engine.py  simulator.py
(+32 files in other folders)
